--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,7 +1,7 @@
 # See: https://github.com/rust-lang/rustfmt/blob/master/Configurations.md
 edition = "2021"
-# group_imports = "One"
-imports_granularity = "Crate"
+group_imports = "One"
+imports_granularity = "One"
 use_field_init_shorthand = true
 wrap_comments = true
 comment_width = 80
@@ -12,7 +12,6 @@ format_strings = true
 format_macro_matchers = true
 format_macro_bodies = true
 normalize_comments = true
-reorder_impl_items = true
 format_code_in_doc_comments = true
 overflow_delimited_expr = true
 normalize_doc_attributes = true
